# ParkEasy

./: .gitignore  README.md  pyproject.toml
DPA/: .gitignore  logs
DPA/DPA/: settings.py
DPA/nns/: cnn_model.h5  nn_for_area_numeric.py
DPA/users/: models.py  views.py
DPA/users/migrations/: 0001_initial.py
ParkEasy/: .env.exem  .gitignore  docker-compose.yml  dockerfile  logs  manage.py  requirements.txt  test_merge.py
ParkEasy/ParkEasy/: celery.py  settings.py  urls.py
ParkEasy/admin_panel/: admin.py  check_task_status.py  forms.py  tasks.py  urls.py  views.py
ParkEasy/car_image_download/: apps.py  forms.py  get_database.py  models.py  urls.py  views.py
ParkEasy/car_image_download/migrations/: 0001_initial.py  0002_carnumberplate.py  0003_remove_carnumberplate_image.py  0004_carnumberplate_user.py
ParkEasy/files/: forms.py  models.py  views.py
ParkEasy/files/async_google_drive/: update_access_token.py
ParkEasy/files/migrations/: 0009_rename_user_userfoldergoogledrive_user_ids.py
ParkEasy/myenv/: pyvenv.cfg
ParkEasy/myenv/Scripts/: activate  activate.bat
ParkEasy/neural_networks/: additional_functions.py  forms.py  implement_model_detect.py  implement_model_ocr.py  models.py  test_tesseract.py  urls.py  views.py
ParkEasy/neural_networks/migrations/: 0001_initial.py
ParkEasy/nns/: additional_functions.py  forms.py  implement_model.py  implement_model_detect.py  implement_model_ocr.py  models.py  urls.py  views.py
ParkEasy/parkings/: models.py  urls.py  views.py
ParkEasy/users/: forms.py  models.py  urls.py  views.py
(+30 files in other folders)
