[tool.poetry]
name = "ParkEasy"
version = "0.1.0"
description = ""
authors = ["Group_6"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-environ = "^0.11.2"
pydrive = "^1.3.1"
psycopg2 = "^2.9.9"
aiogoogle = "^5.7.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
django-redis = "^5.4.0"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
pillow = "^10.4.0"
ultralytics = "8.0.196"
roboflow = "^1.1.40"
inference-sdk = { version = "^0.16.2", python = ">=3.11,<3.12" }
paddlepaddle = "^2.6.1"
paddleocr = "^2.8.1"
pytesseract = "^0.3.13"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.5"
protobuf = "^3.20"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
flower = "^2.0.1"
celery = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
